<?xml version="1.0"?>
<package>
  <name>acorn_show</name>
  <version>0.0.0</version>
  <description>Command line utilities to show various information.
  rot - show rotations in various formats.
  </description>

  <maintainer email="acorn.pooley@sri.com">Acorn Pooley</maintainer>
  <license>GPLv2</license>
  <url type="website">https://github.com/acornacorn/acorn_ros_utils</url> -->
  <author email="acorn.pooley@sri.com">Acorn Pooley</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>tf</build_depend>
  <run_depend>tf</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
